2nd commit added fragement to menu items

--- a/app/src/main/res/menu/navigation_item.xml
+++ b/app/src/main/res/menu/navigation_item.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/feat1"
-        android:title="feature 1 "
+        android:title="call logs "
         android:icon="@drawable/feature_1"/>
     <item
         android:id="@+id/feat2"
